# MachineLearning

./: README.md  config.toml  mlflow.db  pyproject.toml
.dev/: main_dataloader.py  runs.csv
models/gestures/: 20241205-1617model.pt  20241205-1626model.pt
models/gestures_gru/: 20241205-1830model.pt  20241205-1845model.pt  20241205-1852model.pt
notebooks/1_pytorch_intro/: 03_dataloade.ipynb  03_dataloader.ipynb  06_excercises.ipynb  06_experiment1.ipynb
notebooks/1_pytorch_intro/AdamW_128_128/20241208-142138/: events.out.tfevents.1733667698.ML-RefVm-423156.2920.103
notebooks/1_pytorch_intro/AdamW_128_64/20241208-142224/: events.out.tfevents.1733667744.ML-RefVm-423156.2920.104
notebooks/1_pytorch_intro/AdamW_256_128/20241208-142009/: events.out.tfevents.1733667609.ML-RefVm-423156.2920.101
notebooks/1_pytorch_intro/AdamW_256_256/20241208-141942/: events.out.tfevents.1733667582.ML-RefVm-423156.2920.100
notebooks/1_pytorch_intro/AdamW_256_64/20241208-142050/: events.out.tfevents.1733667650.ML-RefVm-423156.2920.102
notebooks/1_pytorch_intro/AdamW_64_64/20241208-142308/: events.out.tfevents.1733667788.ML-RefVm-423156.2920.105
notebooks/1_pytorch_intro/modellogs/20241207-101559/: saved_config.gin  (+1 more)
notebooks/2_experiment2/: 01_experiment2.ipynb
notebooks/3_recurrent_networks/: 04_excercise_basernn.ipynb  04_excercise_gru.ipynb  gestures.gin  mlflow.db
notebooks/4_tuning_networks/: 03_ray.ipynb  hypertune.py
src/machinelearning/: dataloader.py  filehandling.py  main.py  settings.py  utils.py
src/machinelearning/visualisations/: heatmap.py
(+62 files in other folders)
